# hengine

./: CMakeLists.txt  README.md  imgui.ini
.cache/: zsh_history
.cache/clangd/index/: ECS.h.A77DEF8892120B77.idx  UI.cpp.F654BA913A9DA2DD.idx  UI.h.DDB5E60959A0460B.idx  UI.h.FC982A536E71D573.idx  camera.cpp.71A3C3CBA073558F.idx  camera.h.FA63B28CE427A39E.idx  component.h.C73CDEE03A2DD248.idx  cubeObject.cpp.D907AF101647FF6B.idx  cubeObject.h.025F3E634A2629EE.idx  cubeObject.h.2C3499808C5703D6.idx  engine.cpp.5ED0FD8453DF9BBD.idx  engine.h.18E1A11347841FF5.idx  entity.h.0015004F7E5843F6.idx  entityManager.cpp.E250D27DA7A7535B.idx  entityManager.h.5705CAD7D90B9252.idx  gameObject.cpp.98BE6B8089AAF6DC.idx  gameObject.h.F22357CA907B0978.idx  glad.c.43C0D88DC6028CA7.idx  glad.h.DC5D57C423B51045.idx  imconfig.h.08CB2416C62E0CBE.idx  imconfig.h.DE47D0704B870BCC.idx  imgui.cpp.829AD0761CF3B341.idx  imgui.h.0B88569084B96E44.idx  imgui.h.2278845F166F0252.idx  imgui_demo.cpp.107D1F9B99A20BCD.idx  imgui_draw.cpp.9F234F27432FCE07.idx  imgui_impl_glfw.cpp.223F515830D65067.idx  imgui_impl_glfw.h.03049476BA4CD548.idx  imgui_impl_glfw.h.7239A4CAC7EB8CAA.idx  imgui_impl_opengl3.cpp.F95F3B5E329EEE43.idx  imgui_impl_opengl3.h.AE4DE9156B3C9A1C.idx  imgui_impl_opengl3.h.E27A98DE12E2B8C7.idx  imgui_internal.h.A1DB8E544DD4F383.idx  (+23 more)
include/components/: meshComponent.h  transformComponent.h
include/core/: ECS.h  camera.h  component.h  engine.h  entity.h  entityManager.h  gameObject.h  sceneManager.h
src/core/: engine.cpp  entityManager.cpp  gameObject.cpp
src/ui/: UI.cpp
